reorganizing images references and adding preston cover images

--- a/lesson11/fish_haven.html
+++ b/lesson11/fish_haven.html
@@ -56,9 +56,9 @@
     <h2>Fish Haven</h2>
     <div class='hero-placeholder'>
       <picture>
-        <source media="(min-width: 960px)" srcset="images/weather/1328x645_pixels_at_147KB_240ppi.jpg">
-        <source media="(min-width: 658px)" srcset="images/weather/658x319_pixels_at_29KB_240ppi.jpg">
-        <img src="images/weather/443x215_pixels_at_15KB_240ppi.jpg" alt="Sun shining over beautiful grassland and trees">
+        <source media="(min-width: 960px)" srcset="images/weather/preston/weather_1328x645_at_31KB.jpg">
+        <source media="(min-width: 658px)" srcset="images/weather/preston/weather_658x319_at_11KB.jpg">
+        <img src="images/weather/preston/weather_443x215_at_7KB.jpg" alt="Sun shining over beautiful grassland and trees">
       </picture>
       <div class='weather-summary-header'>
         <h3>Weather Summary</h3>
@@ -67,7 +67,6 @@
           <span class='left-cell'>Temperature:</span> <span class='right-cell'><span id='temperature'>N/A</span> ℉</span>
           <span class='left-cell'>Wind Chill:</span> <span class='right-cell'><span id='wind_chill'>N/A</span></span>
           <span class='left-cell'>Humidity:</span> <span class='right-cell'><span id='humidity'>N/A</span>%</span>
-          <!-- <span class='left-cell'>Percipitation:</span> <span class='right-cell'>0 inches</span> -->
           <span class='left-cell'>Wind Speed:</span> <span class='right-cell'><span id='wind_speed'>N/A</span> mph</span>
         </div>
       </div>
@@ -89,22 +88,22 @@
     </div>
     <div>
       <h2>Smart kid</h2>
-      <img id='article-img' src="images/hero.png" alt="Child with hoodie">
+      <img id='article-img' src="images/heros/hero.png" alt="Child with hoodie">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus fermentum arcu quis mollis. Suspendisse vestibulum dui elit, ut commodo ligula scelerisque eu. Nulla facilisi. Proin porttitor quam a orci porttitor fermentum. Vestibulum tempus enim id bibendum molestie. Mauris fermentum, sapien sed molestie aliquet, ex orci varius lectus, vel consequat lorem diam nec lacus. Integer porta bibendum sapien, ac imperdiet tellus consectetur non. Phasellus pharetra dignissim bibendum. Nunc elementum enim nunc, ut bibendum mauris aliquet a. Duis dolor risus, venenatis id urna sit amet, maximus rhoncus mi. Nam metus enim, venenatis non nisi ac, ultrices porta enim. In pulvinar auctor mauris, ac consectetur massa eleifend sed. Morbi vitae turpis urna. Donec pretium dui eget metus porttitor laoreet. Aliquam auctor consequat orci at condimentum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce pharetra luctus sapien nec luctus. Donec lacus mauris, malesuada vitae ex non, tincidunt pharetra felis. Morbi sodales in odio vitae fermentum. Phasellus placerat venenatis urna, a pulvinar libero semper sed. Vivamus vulputate, leo at tempus auctor, mauris dui condimentum turpis, eu mollis turpis dolor sed mauris. Fusce consequat quam at turpis bibendum, hendrerit venenatis justo egestas. Morbi et dictum arcu, eu aliquet urna. Aenean eu sollicitudin quam. Aliquam quis ligula id orci dignissim tempus. Mauris malesuada elit a ullamcorper suscipit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur ornare erat eu tincidunt gravida. Curabitur mauris metus, efficitur rhoncus ex vel, tristique luctus lorem. Sed eu vehicula velit. Vestibulum viverra ligula ante, a porttitor enim vehicula a. Proin convallis, risus vitae efficitur sodales, nibh massa laoreet diam, sit amet vulputate arcu ligula sit amet magna. Nunc non ex ante. Vestibulum sed consequat odio. Integer a nunc nec sem dictum lobortis nec sit amet sapien.</p>
     </div>
     <div class='contact'>
       <p>The Weather Site</p>
       <div id="google-map-split">
-        <img id='google-map' src="images/location_map.png" alt="google satilite map of Preston, Idaho, 83263">
+        <img id='google-map' src="images/bottom/location_map.png" alt="google satilite map of Preston, Idaho, 83263">
         <div id="social">
-          <p><img src="images/location.png" alt="location"><span>30 N 1st E Preston, ID 83263</span></p>
-          <p><img src="images/phone.png" alt="phone number"><span>999.999.9999</span></p>
-          <p><img src="images/mail.png" alt="email address"><span>theweathersite@tws.com</span></p>
+          <p><img src="images/bottom/location.png" alt="location"><span>30 N 1st E Preston, ID 83263</span></p>
+          <p><img src="images/bottom/phone.png" alt="phone number"><span>999.999.9999</span></p>
+          <p><img src="images/bottom/mail.png" alt="email address"><span>theweathersite@tws.com</span></p>
           <div>
-            <img src="images/facebook.png" alt="facebook">
-            <img src="images/twitter.png" alt="twitter">
-            <img src="images/google_plus.png" alt="google plus">
-            <img src="images/twitch.png" alt="twitch">
+            <img src="images/bottom/facebook.png" alt="facebook">
+            <img src="images/bottom/twitter.png" alt="twitter">
+            <img src="images/bottom/google_plus.png" alt="google plus">
+            <img src="images/bottom/twitch.png" alt="twitch">
           </div>
         </div>
       </div>
