--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -51,39 +51,39 @@
   <main>
     <div class='images'>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_1.jpg" alt="Purple clouds with many lightnings">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_1.jpg" alt="Purple clouds with many lightnings">
         <figcaption>Purple clouds with many lightnings</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_2.jpg" alt="Blue clouds with a single lightning">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_2.jpg" alt="Blue clouds with a single lightning">
         <figcaption>Blue clouds with a single lightning</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_3.jpg" alt="Orange dark clouds">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_3.jpg" alt="Orange dark clouds">
         <figcaption>Orange dark clouds</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_4.jpg" alt="Blue clouds with several lightnings">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_4.jpg" alt="Blue clouds with several lightnings">
         <figcaption>Blue clouds with several lightnings</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_5.jpg" alt="Orange clouds with clear sky">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_5.jpg" alt="Orange clouds with clear sky">
         <figcaption>Orange clouds with clear sky</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_6.jpg" alt="Orange clouds with purple clouds">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_6.jpg" alt="Orange clouds with purple clouds">
         <figcaption>Orange clouds with purple clouds</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_7.jpg" alt="White clouds with trees, road, and grass">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_7.jpg" alt="White clouds with trees, road, and grass">
         <figcaption>White clouds with trees, road, and grass</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_8.jpg" alt="Dark orange clouds with dark clouds and sky">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_8.jpg" alt="Dark orange clouds with dark clouds and sky">
         <figcaption>Dark orange clouds with dark clouds and sky</figcaption>
       </figure>
       <figure>
-        <img src="images/640x350.png" data-src="images/weather_9.jpg" alt="White clouds with green mountains">
+        <img src="images/placeholder/640x350.png" data-src="images/gallary/weather_9.jpg" alt="White clouds with green mountains">
         <figcaption>White clouds with green mountains</figcaption>
       </figure>
     </div>
