--- a/lesson11/lazyload.html
+++ b/lesson11/lazyload.html
@@ -49,12 +49,12 @@
   <main>
     <h1>hey.</h1>
     <div>
-      <img src="images/300x400.jpg" data-src="images/group_1.jpg" alt="Wall colorful stone tiling">
-      <img src="images/300x400.jpg" data-src="images/group_2.jpg" alt='It reads "This is the sign you&rsquo;ve been looking for" in neon pipes'>
-      <img src="images/300x400.jpg" data-src="images/group_3.jpg" alt="Colorful smooth rocks">
-      <img src="images/300x400.jpg" data-src="images/group_4.jpg" alt="Colorful shiny smooth rocks">
-      <img src="images/300x400.jpg" data-src="images/group_5.jpg" alt="Green paint mixed with purple paint and red paint">
-      <img src="images/300x400.jpg" data-src="images/group_6.jpg" alt="Natural dark, cool rocks">
+      <img src="images/placeholder/300x400.jpg" data-src="images/lazyload_images/group_1.jpg" alt="Wall colorful stone tiling">
+      <img src="images/placeholder/300x400.jpg" data-src="images/lazyload_images/group_2.jpg" alt='It reads "This is the sign you&rsquo;ve been looking for" in neon pipes'>
+      <img src="images/placeholder/300x400.jpg" data-src="images/lazyload_images/group_3.jpg" alt="Colorful smooth rocks">
+      <img src="images/placeholder/300x400.jpg" data-src="images/lazyload_images/group_4.jpg" alt="Colorful shiny smooth rocks">
+      <img src="images/placeholder/300x400.jpg" data-src="images/lazyload_images/group_5.jpg" alt="Green paint mixed with purple paint and red paint">
+      <img src="images/placeholder/300x400.jpg" data-src="images/lazyload_images/group_6.jpg" alt="Natural dark, cool rocks">
     </div>
   </main>
   <footer>
