--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -56,9 +56,9 @@
     <h2>Preston Idaho</h2>
     <div class='hero-placeholder'>
       <picture>
-        <source media="(min-width: 960px)" srcset="images/weather/1328x645_pixels_at_147KB_240ppi.jpg">
-        <source media="(min-width: 658px)" srcset="images/weather/658x319_pixels_at_29KB_240ppi.jpg">
-        <img src="images/weather/443x215_pixels_at_15KB_240ppi.jpg" alt="Sun shining over beautiful grassland and trees">
+        <source media="(min-width: 960px)" srcset="images/weather/preston/weather_1328x645_at_31KB.jpg">
+        <source media="(min-width: 658px)" srcset="images/weather/preston/weather_658x319_at_11KB.jpg">
+        <img src="images/weather/preston/weather_443x215_at_7KB.jpg" alt="Sun shining over beautiful grassland and trees">
       </picture>
       <div class='weather-summary-header'>
         <h3>Weather Summary</h3>
@@ -67,7 +67,6 @@
           <span class='left-cell'>Temperature:</span> <span class='right-cell'><span id='temperature'>N/A</span> ℉</span>
           <span class='left-cell'>Wind Chill:</span> <span class='right-cell'><span id='wind_chill'>N/A</span></span>
           <span class='left-cell'>Humidity:</span> <span class='right-cell'><span id='humidity'>N/A</span>%</span>
-          <!-- <span class='left-cell'>Percipitation:</span> <span class='right-cell'>0 inches</span> -->
           <span class='left-cell'>Wind Speed:</span> <span class='right-cell'><span id='wind_speed'>N/A</span> mph</span>
         </div>
       </div>
@@ -89,7 +88,7 @@
     </div>
     <div>
       <h2>Smart kid</h2>
-      <img id='article-img' src="images/hero.png" alt="Child with hoodie">
+      <img id='article-img' src="images/heros/hero.png" alt="Child with hoodie">
       <p>He goes to Preston Jr. High. His GPA is perfect 4.0. They held celebration for his preservance and success in completing each class with straight A's. During an interview, he said that his secret to success is to not take summer off and read a lot and a lot of books. He started reading a lot when he was in 4th grade ranging from sci-fi and fantasy to nonfiction novels, science, and history. He even read all kinds of William Shakespeare with ease in 6th grade. He is the sole child of two wonderful parents. Their family made a lot of money when he was in 4th grade. That's when the parents made the decision to require him to read books and lucky for him, he quickly loved to read and he would have discussion with his parents about what he read. </p>
       <p>In fact, he loved to read so much he decided to write books himself. He made many fan-based books such as "To Kill Mockingbirds", "Invisible Manned Vehicle", "Great Exceptional", "The Great Latsby", and many more. He would spend lunch time drawing of what it would look like in the stories he read.</p>
       <p>Such a smart kid.</p>
@@ -98,16 +97,16 @@
     <div class='contact'>
       <p>The Weather Site</p>
       <div id="google-map-split">
-        <img id='google-map' src="images/location_map.png" alt="google satilite map of Preston, Idaho, 83263">
+        <img id='google-map' src="images/bottom/location_map.png" alt="google satilite map of Preston, Idaho, 83263">
         <div id="social">
-          <p><img src="images/location.png" alt="location"><span>30 N 1st E Preston, ID 83263</span></p>
-          <p><img src="images/phone.png" alt="phone number"><span>999.999.9999</span></p>
-          <p><img src="images/mail.png" alt="email address"><span>theweathersite@tws.com</span></p>
+          <p><img src="images/bottom/location.png" alt="location"><span>30 N 1st E Preston, ID 83263</span></p>
+          <p><img src="images/bottom/phone.png" alt="phone number"><span>999.999.9999</span></p>
+          <p><img src="images/bottom/mail.png" alt="email address"><span>theweathersite@tws.com</span></p>
           <div>
-            <img src="images/facebook.png" alt="facebook">
-            <img src="images/twitter.png" alt="twitter">
-            <img src="images/google_plus.png" alt="google plus">
-            <img src="images/twitch.png" alt="twitch">
+            <img src="images/bottom/facebook.png" alt="facebook">
+            <img src="images/bottom/twitter.png" alt="twitter">
+            <img src="images/bottom/google_plus.png" alt="google plus">
+            <img src="images/bottom/twitch.png" alt="twitch">
           </div>
         </div>
       </div>
