--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -58,16 +58,16 @@
     <div class='contact'>
       <p>The Weather Site</p>
       <div id="google-map-split">
-        <img id='google-map' src="images/location_map.png" alt="google satilite map of Preston, Idaho, 83263">
+        <img id='google-map' src="images/bottom/location_map.png" alt="google satilite map of Preston, Idaho, 83263">
         <div id="social">
-          <p><img src="images/location.png" alt="location"><span>30 N 1st E Preston, ID 83263</span></p>
-          <p><img src="images/phone.png" alt="phone number"><span>999.999.9999</span></p>
-          <p><img src="images/mail.png" alt="email address"><span>theweathersite@tws.com</span></p>
+          <p><img src="images/bottom/location.png" alt="location"><span>30 N 1st E Preston, ID 83263</span></p>
+          <p><img src="images/bottom/phone.png" alt="phone number"><span>999.999.9999</span></p>
+          <p><img src="images/bottom/mail.png" alt="email address"><span>theweathersite@tws.com</span></p>
           <div>
-            <img src="images/facebook.png" alt="facebook">
-            <img src="images/twitter.png" alt="twitter">
-            <img src="images/google_plus.png" alt="google plus">
-            <img src="images/twitch.png" alt="twitch">
+            <img src="images/bottom/facebook.png" alt="facebook">
+            <img src="images/bottom/twitter.png" alt="twitter">
+            <img src="images/bottom/google_plus.png" alt="google plus">
+            <img src="images/bottom/twitch.png" alt="twitch">
           </div>
         </div>
       </div>
