updating page linking

--- a/lesson11/fish_haven.html
+++ b/lesson11/fish_haven.html
@@ -47,8 +47,8 @@
         <li><a href="preston.html">Preston</a></li>
         <li><a href="soda_springs.html">Soda Springs</a></li>
         <li class='active'><a href="fish_haven.html">Fish Haven</a></li>
-        <li><a href="#">Storm Center</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="stormcenter.html">Storm Center</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
   </header>
