--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -36,11 +36,11 @@
     <nav class='clearfix'>
       <ul id='navigation' class='hide responsive'>
         <li><a href="index.html">Home</a></li>
-        <li class='active'><a href="preston-4.html">Preston</a></li>
-        <li><a href="#">Soda Springs</a></li>
-        <li><a href="#">Fish Haven</a></li>
-        <li><a href="#">Storm Center</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="preston.html">Preston</a></li>
+        <li><a href="soda_springs.html">Soda Springs</a></li>
+        <li><a href="fish_haven.html">Fish Haven</a></li>
+        <li class='active'><a href="stormcenter.html">Storm Center</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
   </header>
