--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -20,7 +20,7 @@
     <script defer src="javascript/observe.js"></script>
     <script defer src="javascript/menu_responsive.js"></script>
     <script defer src="javascript/footer_time.js"></script>
-    <script defer src="javascript/banner.js"></script>
+    <!-- <script defer src="javascript/banner.js"></script> -->
     <script defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script defer src="javascript/load_fonts.js"></script>
     <script defer src="javascript/weather.js"></script>
