updating for audit

--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -26,8 +26,8 @@
     
     <script defer src="javascript/menu_responsive.js"></script>
     <script defer src="javascript/footer_time.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="javascript/load_fonts.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script defer src="javascript/load_fonts.js"></script>
     <script defer src="javascript/range.js"></script>
   </head>
 <body>
