--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -10,13 +10,19 @@
     />
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/small.css">
-    <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css">
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/lazyload.css">
-    
+
+    <link rel="preload" href="css/small.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/medium.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/large.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/footer.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <noscript>
+      <link rel="stylesheet" href="css/small.css">
+      <link rel="stylesheet" href="css/medium.css">
+      <link rel="stylesheet" href="css/large.css">
+      <link rel="stylesheet" href="css/footer.css">
+    </noscript>    
     <script defer src="javascript/observe.js"></script>
     <script defer src="javascript/menu_responsive.js"></script>
     <script defer src="javascript/footer_time.js"></script>
