--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -6,7 +6,7 @@
     <title>Techy Progression's Weather Page</title>
     <meta
       name="description"
-      content="A home page of a first project of weather website. It contains color scheme, target audience, typography, and a home page. - WDD 230 - Web Frontend Development at BYUI - Idaho"
+      content="A home page of weather website. It's a home page for preston, soda springs, storm center, fish haven, and gallery pages. - WDD 230 - Web Frontend Development at BYUI - Idaho"
     />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
