--- a/lesson11/fish_haven.html
+++ b/lesson11/fish_haven.html
@@ -6,7 +6,7 @@
     <title>Techy Progression's Weather Page</title>
     <meta
       name="description"
-      content="A home page of a first project of weather website. It contains color scheme, target audience, typography, and a home page. - WDD 230 - Web Frontend Development at BYUI - Idaho"
+      content="A Fish Haven page that follows the pattern of Preston Page. - WDD 230 - Web Frontend Development at BYUI - Idaho"
     />
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
