--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Techy Progression's Weather Page</title>
+    <title>Techy Progression's Gallery</title>
     <meta
       name="description"
       content="A gallary demonstration of pretty weather images. - WDD 230 - Web Frontend Development at BYUI - Idaho"
