--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Techy Progression's Weather Page</title>
+    <title>Techy Progression's Preston</title>
     <meta
       name="description"
       content="A main demonstration page to be used for any other town. - WDD 230 - Web Frontend Development at BYUI - Idaho"
