--- a/lesson11/soda_springs.html
+++ b/lesson11/soda_springs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Techy Progression's Weather Page</title>
+    <title>Techy Progression's Soda Springs</title>
     <meta
       name="description"
       content="A Soda Springs page that follows the pattern of Preston Page. - WDD 230 - Web Frontend Development at BYUI - Idaho"
