--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Techy Progression's Weather Page</title>
+    <title>Techy Progression's Storm Center</title>
     <meta
       name="description"
       content="A page that demonstrates form inputs with storm as an example - WDD 230 - Web Frontend Development at BYUI - Idaho"
