updating to include description

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -75,11 +75,11 @@
         <span class='weather-top'>Wed</span>
         <span class='weather-top'>Thu</span>
         <span class='weather-top'>Fri</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>89°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>87°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>78°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>75°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>72°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
       </div>
     </div>
     <div>
