--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -87,11 +87,11 @@
         <span class='weather-top'>Wed</span>
         <span class='weather-top'>Thu</span>
         <span class='weather-top'>Fri</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F <span>N/A</span></span>
       </div>
     </div>
     <div>
